Last class and Project Finished

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -14,6 +14,9 @@
   <div class="item-3"></div>
   <div class="item-4"></div>
   <div class="item-5"></div>
+  <div class="item-6"><p>CSS Grid Layout</p></div>
+  <div class="item-7"></div>
+  <div class="item-8"><p>Daniel Galán</p></div>
  </div>
 </body>
 </html>
